# wifi-sensing

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  icon.icns  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.py  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/ai/: __init__.py  bitnet.py  change_detection.py  classifier.py  human_sensing.py
app/analytics/: __init__.py  signal_processing.py  summary.py
app/database/: __init__.py  models.py  repository.py
app/ui/: __init__.py  heatmap_panel.py  human_panel.py  llm_panel.py  main_window.py  scan_worker.py  theme.py
app/utils/: __init__.py  config.py  logging_config.py
app/wifi/: __init__.py  location.py  models.py  scanner.py
docs/: GUIA-ABAS.md  index.html
docs/screenshots/: README.md
tests/: test_change_detection.py  test_classifier.py  test_human_sensing.py  test_repository.py  test_signal_processing.py
tools/: face_crop.py  make_icon.py
